--- a/style.css
+++ b/style.css
@@ -184,3 +184,57 @@ header h1 {
     font-size: 30px;
 }
 /* End of Section: Quote Styling */
+
+/* Section: Contact Styling */
+#contact {
+    text-align: left;
+    background-color: #501263ff;
+    color: white;
+    padding: 100px;
+    min-height: 50vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.contact-bg {
+    background-color: #100B1Fff;
+    border: 10px solid #6471F0ff;
+    border-radius: 20px;
+    box-shadow: 10px 10px 8px #2d1036;
+    padding: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.contact-bg #contact-info {
+    margin-right: 500px;
+}
+
+.contact-bg #contact-info h4 {
+    font-family: 'Handlee', cursive;
+    font-size: 40px;
+    margin-bottom: 10px;
+
+}
+
+.contact-bg #contact-info p {
+    font-family: 'Balsamiq Sans', cursive;
+    font-size: 25px;
+
+}
+
+.contact-bg button {
+    font-family: 'Monda', sans-serif;
+    font-size: 15px;
+    background-color: #6471F0ff;
+    color: white;
+    border: 2px solid white;
+    padding: 0 15px;
+}
+
+.contact-bg button:hover  {
+    background-color: #011549ff;
+}
+/* End of Section: Contact Styling */
