--- a/style.css
+++ b/style.css
@@ -227,11 +227,11 @@ header h1 {
 
 .contact-bg button {
     font-family: 'Monda', sans-serif;
-    font-size: 15px;
+    font-size: 20px;
     background-color: #6471F0ff;
     color: white;
     border: 2px solid white;
-    padding: 0 15px;
+    padding: 20px 30px;
 }
 
 .contact-bg button:hover  {
